--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -64,5 +64,6 @@
         <script src="app/controllers/getempresaController.js"></script>
         <script src="app/controllers/getuserController.js"></script>
         <script src="app/controllers/getusr_clienteController.js"></script>
+        <script src="app/controllers/getperfilController.js"></script>
     </body>
 </html>
