--- a/public/app/src/component/empresas.html
+++ b/public/app/src/component/empresas.html
@@ -40,7 +40,7 @@
                       <div id="collapseTree" class="panel-collapse collapse">
                           <ul class="sub-menu">
                             <li>
-                              <a class="buttonMenu _title" data-target="#" ng-href="/perfil"><span style="margin-right:10px; margin-left: 15%;" class="glyphicon glyphicon-file" aria-hidden="true"></span>Perfiles</a>
+                              <a class="buttonMenu _title" data-target="#" ng-href="/admin/getperfil"><span style="margin-right:10px; margin-left: 15%;" class="glyphicon glyphicon-file" aria-hidden="true"></span>Perfiles</a>
                             </li>
                           </ul>
                         </div>
